# AFMSlicer

./: .git-blame-ignore-revs  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build_mkdocs.yaml  ci.yml  tests.yaml
api/: index.html
api/afmslicer/: index.html
api/slicer/: index.html
api/validation/: index.html
contributing/: index.html
contributing/adding_modules/: index.html
contributing/napari/: index.html
docs/: contributing.md  index.md  installation.md  napari.md  usage.md  workflow.md
docs/api/: index.md  slicer.md  validation.md
docs/contributing/: adding_modules.md  index.md  napari.md
docs/usage/: cli.md  configuration.md  index.md  napari.md
installation/: index.html
introduction/: index.html
notebooks/: AFMSlicer.py  AFMSlicer_compare_slicing.py  AFMSlicer_flatenning.py
search/: search_index.json
src/afmslicer/: __init__.py  classes.py  default_config.yaml  entry_point.py  filter.py  io.py  logging.py  plotting.py  processing.py  run_modules.py  slicer.py  statistics.py  validation.py
tests/: conftest.py  test_classes.py  test_entry_point.py  test_filter.py  test_io.py  test_package.py  test_plotting.py  test_processing.py  test_run_modules.py  test_slicer.py  test_statistics.py
tests/__snapshots__/: test_filter.ambr  test_processing.ambr  test_run_modules.ambr  test_slicer.ambr  test_statistics.ambr
tests/resources/slicer/: afmslicer_sample1_sliced_segment.npz  afmslicer_sample2_sliced.npz  afmslicer_sample2_sliced_mask.npz  pyramid_array_sliced.npz  pyramid_array_sliced_mask_segment.npz  pyramid_sliced_clean_region_properties_2.pkl  pyramid_sliced_clean_region_properties_5.pkl  pyramid_sliced_region_properties_2.pkl  pyramid_sliced_region_properties_5.pkl  pyramid_sliced_segments_clean_2.npz  sample1_spm_sliced.npz  sample1_spm_sliced_mask.npz  sample2_spm_sliced_mask.npz  simple_height_array_mask_stacked_2_segment.npy  simple_height_array_mask_stacked_2_segment.npz  simple_height_array_sliced.npy  simple_height_array_sliced_mask.npy  square_array_sliced.npz  square_array_sliced_mask_segment.npz  three_layer_three_segments_segment.npy  three_layer_three_segments_segment.npz
usage/: index.html
usage/cli/: index.html
usage/configuration/: index.html
usage/napari/: index.html
workflow/: index.html
